# synmerco-autogpt

./: README.md  pyproject.toml
synmerco_autogpt/: __init__.py  _client.py  _commands.py  _component.py
tests/: test_component.py
