[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synmerco-autogpt"
version = "1.0.0"
description = "46 AutoGPT commands for AI agent commerce — escrow, reputation, marketplace, disputes, wallets. Drop-in component."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Synmerco LLC", email = "joelasota@hotmail.com"}]
keywords = ["autogpt","ai-agent","escrow","reputation","trust","synmerco","autonomous","agent-commerce"]
classifiers = ["Development Status :: 5 - Production/Stable","License :: OSI Approved :: MIT License","Programming Language :: Python :: 3"]
dependencies = ["httpx>=0.25.0","pydantic>=2.0.0"]

[project.urls]
Homepage = "https://synmerco.com"
Repository = "https://github.com/synmerco/integration"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["synmerco_autogpt"]